# wh_interview

./: ML QA Auto engineer tech task.docx
1_data_quality/: README.md  pyproject.toml
1_data_quality/analysis/: faq_data_quality.ipynb
1_data_quality/data_quality_module/: data_cleaner_main.py  data_preprocessing_pipeline.py
1_data_quality/data_quality_module/preprocessors/: clean_html_tags_preprocessor.py  delete_cols_preprocessor.py  delete_rows_preprocessor.py  lower_case_preprocessor.py  preprocessor.py
1_data_quality/dataset/: processed_FAQs.csv
1_data_quality/tests/: test_preprocessor.py
2_model_performance_testing/: FAQ_Model_Training.ipynb  README.md  model_trainer.py  pyproject.toml
2_model_performance_testing/app/: model.py  model_response.py  preprocess.py
2_model_performance_testing/data/: pre_recorded_questions.json
2_model_performance_testing/jupyter_notebooks/: FAQ_Model_Training.ipynb
2_model_performance_testing/tests/: test_functional_use_cases.py  test_pre_recorded_questions.py
3_1_api_enpoint_testing/: README.md
3_1_api_enpoint_testing/.github/workflows/: ci.yml
3_1_api_enpoint_testing/tests/: conftest.py  test_main.py
3_1_api_enpoint_testing/user_service/: crud.py  main.py  user_model.py
3_2_query_api_endpoint_testing/: README.md  pyproject.toml
3_2_query_api_endpoint_testing/model_backend/: model.py  model_response.py  preprocess.py
3_2_query_api_endpoint_testing/model_checkpoint/trained_chatbot-20240722T154338Z-001/: README.md
3_2_query_api_endpoint_testing/model_service/: main.py  query_model.py
3_2_query_api_endpoint_testing/tests/: test_main.py
3_api_enpoint_testing/: pyproject.toml  sql_app.db
3_api_enpoint_testing/user_service/: README.md  user_schema.py
