[tool.poetry]
name = "1-data-quality"
version = "0.1.0"
description = ""
authors = ["ShubhankarRaj <raj8lm@gmail.com>"]
readme = "README.md"
packages = [{include = "1_data_quality"}]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.2"
pandas = "^2.2.2"
numpy = "^2.0.1"
seaborn = "^0.13.2"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
