[tool.poetry]
name = "3-2-query-api-endpoint-testing"
version = "0.1.0"
description = ""
authors = ["ShubhankarRaj <raj8lm@gmail.com>"]
readme = "README.md"
packages = [{include = "3_2_query_api_endpoint_testing"}]

[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = "^3.0.1"
uvicorn = "^0.30.3"
pytest = "^8.3.1"
pytest-mock = "^3.14.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
